Fix ruby logo file, which was off center on small screen

--- a/src/components/skillLogos/style.css
+++ b/src/components/skillLogos/style.css
@@ -6,7 +6,7 @@
     border-radius: 8px;
     display: flex;
     justify-content: center;
-    height: 210px;
+    height: 200px;
 
     &.rails-logo {
       align-self: center;
@@ -15,6 +15,19 @@
 
     img {
       width: 100%;
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .skill-logos {
+    gap: 10px;
+    .tilt {
+      height: 150px;
+
+      &.rails-logo {
+        height: 90px;
+      }
     }
   }
 }
